# vibeboard

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  VibeBoard-business-plan.md  VibeBoard-professional-business-plan.md  index.html  package-lock.json  package.json  vite.config.js
backend/compiler-service/template/main/: CMakeLists.txt
deploy/: Caddyfile  Dockerfile  HTTPS_USB_FLASH.md  docker-compose.yml  nginx-vibeboard.conf  nginx.conf
docs/: CLAUDE.md  README.md  agent-skill-integration.md  architecture-natural-language-hardware-automation.md  development-plan.md  digital-twin-architecture.md  huangshan-native-architecture.md  huangshan-natural-language-flow.md  lvgl-preview-runner.md  project-map.md
investor-report/: index.html
scripts/: create-system-debug-compile-payload.mjs  generate-huangshan-example-app.mjs  run-python-test.mjs  serve-dist-preview.mjs  test-agent-adapter.mjs  test-ble-ota-guard.mjs  test-board-platform.mjs  test-board-skills.mjs  test-build-evidence.mjs  test-code-generation.mjs  test-compile-package.mjs  test-compiler-incremental-cache.mjs  test-digital-twin-interaction.mjs  test-digital-twin-scene.mjs  test-file-placement.mjs  test-generation-pipeline.mjs  test-hardware-workflow.mjs  test-huangshan-ai-builder.mjs  test-huangshan-app-builder.mjs  test-huangshan-app-capsule.mjs  test-huangshan-app-template.mjs  test-huangshan-build-adapter-log-parser.mjs  test-huangshan-build-artifacts.mjs  test-huangshan-capability-profile.mjs  test-huangshan-device-actions.mjs  test-huangshan-real-preview.mjs  (+17 more)
(+156 files in other folders)
